# Taller8

./: .gitignore  EntregaFinal.ipynb  README.MD  Taller.ipynb  Test.ipynb  best_model.keras  pyproject.toml
