[project]
name = "taller8"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "grain>=0.2.16",
    "jax>=0.9.2",
    "kagglehub>=1.0.0",
    "keras>=3.14.0",
    "keras-cv>=0.9.0",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
